--- a/changelog.txt
+++ b/changelog.txt
@@ -20,4 +20,5 @@
 - nambahin hover di bloknya jadi ada efek border warna ungu
 - nambahin efek di blok kalo udah di atur sebagai blok instruksi
 - nambahin ucapan selamat untuk pemenang
+- papan di sebelah board arena bakal ngikutin layar
 - buat websitenya responsif alias bisa dibuka di device manapuna tanpa kepotong-potong anjim sungguh update yang sangat canggih
