--- a/changelog.txt
+++ b/changelog.txt
@@ -21,10 +21,10 @@
 - nambahin efek di blok kalo udah di atur sebagai blok instruksi
 - nambahin ucapan selamat untuk pemenang
 - papan di sebelah board arena bakal ngikutin layar
-- buat websitenya responsif alias bisa dibuka di device manapuna tanpa kepotong-potong anjim sungguh update yang sangat canggih
+- buat websitenya responsif alias bisa dibuka di device manapun tanpa kepotong-potong anjim sungguh update yang sangat canggih
 
 17 Februari 2026:
-- buat gamenya bakal fit di segala bentuk layar device
+- libur dulu bos, lagi galau berat
 
 18 Februari 2026:
 - buat mode game, ada mode polos dan mode yang bisa generate random blok mundur
